<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tv_Top250movies">Топ 250 лучших фильмов</string>
    <string name="tv_UpComing">Новинки</string>
    <string name="tv_TopTvShows">Стриминговые сервисы</string>

    <string name="movie_title_mock">Название фильма</string>
    <string name="movie_genre_mock">Приключение семейный ужастик</string>
    <string name="movie_release_year_mock">2023</string>

    <string name="rating_mock">5.0</string>

    <string name="chip_movie">Фильмы</string>
    <string name="chip_tv_series">Сериалы</string>
    <string name="chip_cartoon">Мультфильмы</string>

    <string name="chip_netflix">Netflix</string>
    <string name="chip_prime">Prime</string>
    <string name="chip_disney">Disney+</string>
    <string name="chip_hbo">HBO</string>
    <string name="chip_apple">Apple TV</string>

    <string name="incorrect_movie_data">Не определен тип данных</string>

</resources>