<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvShowsFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <TextView
        android:id="@+id/category_title"
        style="@style/movie_category_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_16dp_medium"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:drawablePadding="@dimen/margin_8dp_small"
        android:drawableTint="@color/white"
        android:gravity="center_vertical"
        android:text="@string/tv_TopTvShows"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/chip_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_title">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp_small"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/chip_netflix"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chip_prime"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_disney"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_hbo"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_apple"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVTvShows"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_filter"
        tools:listitem="@layout/item_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>