<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upcomingFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <TextView
        android:id="@+id/category_title"
        style="@style/movie_category_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_16dp_medium"
        android:text="@string/tv_UpComing"
        android:drawablePadding="@dimen/margin_8dp_small"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableRightCompat="@drawable/ic_arrow_forward"
        app:drawableTint="@color/white" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_title"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_movie"
            style="@style/CustomChipFilterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/chip_movie" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tv_series"
            style="@style/CustomChipFilterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_tv_series" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cartoon"
            style="@style/CustomChipFilterStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chip_cartoon" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVUpComing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_filter"
        tools:listitem="@layout/item_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>