<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top250fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/Top250Movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/movie_category_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp_medium"
            android:layout_marginStart="@dimen/margin_16dp_medium"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:drawablePadding="@dimen/margin_8dp_small"
            android:drawableTint="@color/white"
            android:gravity="center_vertical"
            android:text="@string/tv_Top250movies" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp_medium"
            android:layout_marginTop="@dimen/margin_8dp_small"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/chip_movie"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chip_tv_series"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_cartoon"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipTextColor="@color/chip_text_color_selector"
                app:chipType="filter" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVTop250"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_16dp_medium"
            android:layout_marginTop="@dimen/margin_8dp_small"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_movie" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>