<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_movie_height"
    android:layout_marginBottom="@dimen/margin_8dp_small"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/poster_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="@dimen/item_movie_width"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="contentDescription" />

        <LinearLayout
            android:id="@+id/rating_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp_small"
            android:layout_marginEnd="@dimen/margin_6dp_small"
            android:background="@drawable/rating_block_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/margin_4dp_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/rating_icon_size"
                android:layout_height="@dimen/rating_icon_size"
                android:layout_gravity="center"
                android:src="@drawable/ic_star"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/movie_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_2dp_small"
                android:text="@string/rating_mock" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_movie_title"
        style="@style/list_item_movie_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/movie_title_mock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_block"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_genre"
        style="@style/movie_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp_small"
        android:layout_marginEnd="@dimen/margin_16dp_medium"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/movie_genre_mock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_movie_title"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

    <TextView
        android:id="@+id/tv_movie_release_year"
        style="@style/movie_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/movie_release_year_mock"
        app:layout_constraintStart_toStartOf="@id/tv_movie_title"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_genre" />

</androidx.constraintlayout.widget.ConstraintLayout>